Fix some hyp link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="jumbotron py-sm-2 my-0">
       <!-- logo here -->
       <nav class="navbar navbar-expand-lg text-white navbar-dark">
-        <a class="navbar-brand" href="/">5 Bucks Solocup</a>
+        <a class="navbar-brand" href="/league-solo-visual">5 Bucks Solocup</a>
         <button
           class="navbar-toggler"
           type="button"
