Fix container bug

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
 
 
-    <div class="cotnainer">
+    <div class="container">
       <div class="row row-content">
         <div class="col">
           <h3>Match Record</h3>
@@ -91,6 +91,10 @@
             </li>
           </ul>
           <div id="scheduleTable" class="tab-content">
+          </div></div></div></div>
+
+
+
 <script id="match-template" type="text/html">
                       <th scope="row"><p>#{{round}}</p></th>
                       <td>
