--- a/stats.html
+++ b/stats.html
@@ -81,7 +81,7 @@
     </div>
 
 
-    <div class="cotnainer">
+    <div class="container">
       <div class="row row-content">
         <div class="col">
           <h3>Match Record</h3>
@@ -92,6 +92,9 @@
           </ul>
           <div id="scheduleTable" class="tab-content">
           </div>
+        </div>
+      </div>
+    </div>
 
 
 
