Fix wordings for stat

--- a/stats.html
+++ b/stats.html
@@ -84,13 +84,14 @@
     <div class="container">
       <div class="row row-content">
         <div class="col">
-          <h3>Match Record</h3>
+          <h3>Stats</h3>
           <ul class="nav nav-tabs" role="tablist" id="seasonlist">
             <li class="nav-item">
-              <h5 class="nav-link">Seasons</h5>
+              <h5 class="nav-link">Counter Relationship</h5>
             </li>
           </ul>
           <div id="scheduleTable" class="tab-content">
+            <p> Hover on the name to see counter relationship</p>
           </div>
         </div>
       </div>
