--- a/stats.html
+++ b/stats.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet"  href="js/flickity/css/flickity.css" />
     <link rel="stylesheet" href="css/main.css" />
     <!-- end build -->
-    <title>5 Bucks Solocup</title>
+    <title>League Solocup</title>
   </head>
 
   <body class="hp">
@@ -21,7 +21,7 @@
     <div class="jumbotron py-sm-2 my-0">
       <!-- logo here -->
       <nav class="navbar navbar-expand-lg text-white navbar-dark">
-        <a class="navbar-brand" href="/league-solo-visual">5 Bucks Solocup</a>
+        <a class="navbar-brand" href="/league-solo-visual">League Solocup</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,46 +36,16 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Match Record</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="stats.html">Stats</a>
-            </li>>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Players
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">TSM</a>
-                <a class="dropdown-item" href="#">Team Liquid</a>
-                <!-- <div class="dropdown-divider"></div> -->
-                <a class="dropdown-item" href="#">FlyQuest</a>
-              </div>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#"></a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0 ">
-            <input
-              class="rounded-left form-control mr-sm-0 search-field"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="ml-0 btn btn-outline my-2 my-sm-0 rounded-right" type="submit">
-              Search
-            </button>
-          </form>
         </div>
       </nav>
     </div>
